Add ETA to running tests

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div>
+    <div class="margindiv">
       <table id="testtable"></table>
     </div>
     <script src="main.js"></script>
